// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MessageValidElement should match the snapshot 1`] = `
<div>
  <p
    class="fr-valid-text"
    data-testid="MessageValidElement"
    id="id-mock-messages"
  >
    any-i18n-valid-message
  </p>
</div>
`;

exports[`MessageValidElement should render without the data-testid 1`] = `
<div>
  <p
    class="fr-valid-text"
    id="id-mock-messages"
  >
    Form.message.valid
  </p>
</div>
`;
